made changes to background color and changed the theme to deeppurple-amber

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -38,7 +38,7 @@
         </mat-form-field>
       </div>
       <span class="aLink">Forgot Password</span>
-      <button mat-flat-button color="#037171">Login</button>
+      <button mat-flat-button color="primary">Login</button>
     </form>
   </mat-card-content>
 </mat-card>
