--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,11 +1,11 @@
 .right {
-  width: 49%;
+  width: 100%;
   height: 100px;
   border: 1px solid red;
   float: right;
 }
 .left {
-  width: 49%;
+  width: 100%;
   height: 100%;
   float: left;
   border: 1px solid black;
@@ -13,13 +13,13 @@
 
 mat_card {
   background-color: #037171;
-  max-width: 200px;
+  max-width: 100%;
   margin: 2em auto;
   text-align: center;
   max-height: 600px;
 }
 .mainCard {
-  width: 50%;
+  width: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
