--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,7 +9,7 @@
           <mat-label>Email</mat-label>
           <input formControlName="email" matInput required />
           <mat-error *ngif="loginForm.get('email').error?.required">
-            requried email address
+            Requried email address
           </mat-error>
         </mat-form-field>
       </div>
