--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,34 +1,16 @@
-.right {
-  width: 100%;
-  height: 100px;
-  border: 1px solid red;
-  float: right;
-}
-.left {
-  width: 100%;
-  height: 100%;
-  float: left;
-  border: 1px solid black;
-}
-
-mat_card {
-  background-color: #037171;
-  max-width: 100%;
-  margin: 2em auto;
-  text-align: center;
-  max-height: 600px;
-}
 .mainCard {
-  width: 100%;
-  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f0f0f0;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 6px 8px rgba(0, 0, 0, 0.2), 5px 6px 8px rgba(0, 0, 0, 0.19);
 }
 mat-card-content {
-  max-width: 100%;
-  // border: 1px solid black;
+  width: 80%;
 }
 .header {
   text-align: center;
@@ -40,7 +22,7 @@ mat-card-content {
   padding-left: 0px;
 }
 .email-input {
-  padding-top: 10px;
+  width: 100%;
 }
 .aLink {
   padding-right: 60px;
