--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -3,6 +3,13 @@ html {
   width: 100%;
   height: 100%;
 }
+:host {
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 .mainPage {
   display: flex;
   // border: 1px solid black;
