--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
   <ul *ngIf="!isLoggedIn">
-    <li><a routerLink="/login">Login</a></li>
-    <li><a routerLink="/signup">Sign Up</a></li>
+    <li><a routerLink="/login" (click)="toggleForm(true)">Login</a></li>
+    <li><a (click)="toggleForm(false)">Sign Up</a></li>
   </ul>
   <ul *ngIf="isLoggedIn">
     <li><a routerLink="/home">Home</a></li>
