--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -12,8 +12,8 @@
     </div> -->
 
     <div class="right">
-      <!-- <h1>Order.It</h1>
-      <p>This a Login page</p> -->
+      <h1>Order.It</h1>
+      <p>This a Login page</p>
     </div>
   </div>
 </body>
